--- a/config/conf.yaml
+++ b/config/conf.yaml
@@ -7,7 +7,10 @@
 ###################
 
 # database path
-db_path: ~/workspace/supergossip/db/
+db_path: ~/.supergossip/db/
+
+user_db: user.db
+routing_db: routing.db
 
 # Listening port of the server socket for incoming requests
 listening_port: 8964
